Add about's linkk

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     				<div class="links">
                         <a href="https://docs.google.com/spreadsheet/viewform?formkey=dHhGX1lVQV9HcWdBNy1QWXdGR2lnLVE6MQ#gid=0" target="_blank">משוב</a>
                     </div>
+ 		    <div class="links">
+                        <a href="./about.html" target="_blank">אודות</a>
+                    </div>
                 </div>
             </div>
         </div>
